--- a/package.json
+++ b/package.json
@@ -1,19 +1,5 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "nodemon ./index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [
-    "api",
-    "nodejs"
-  ],
-  "author": "Joao Mendes",
-  "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "axios": "^1.4.0"
   }
 }
